[package]
name = "takina"
version = "1.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive", "color"] }
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.9"
ureq = "2.5.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

# Debian bullseye binary
# podman run --rm -v "$PWD":/build -w /build docker.io/rust:1.65-bullseye cargo build --release
